--- a/pofology/package.json
+++ b/pofology/package.json
@@ -11,6 +11,8 @@
     "@headlessui/react": "^1.7.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "html2pdf.js": "^0.12.1",
+    "mongodb": "^7.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
