Enhance analytics tracking and add Docker deployment scripts
Expanded analytics tracking with detailed device, behavior, and referrer metrics in Tracking.tsx. Added scripts and documentation for Docker build, push, and Nginx setup, including PowerShell and Bash utilities. Updated Dockerfile for production builds and improved admin/statistics page logic.

--- a/pofology/Dockerfile
+++ b/pofology/Dockerfile
@@ -12,8 +12,7 @@ RUN yarn install --frozen-lockfile
 
 # Build stage
 FROM base AS builder
-# ⚠️ Đặt NODE_ENV=development để Next.js không tự cài lại packages
-ENV NODE_ENV=development
+ENV NODE_ENV=production
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -23,7 +22,7 @@ RUN yarn build
 FROM base AS prod-deps
 ENV NODE_ENV=production
 COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile --production=true && yarn cache clean
+RUN yarn install --frozen-lockfile --production && yarn cache clean
 
 # Runtime stage
 FROM node:20-alpine AS runner
@@ -36,9 +35,9 @@ USER node
 # Copy production modules and build artifacts
 COPY --chown=node:node --from=prod-deps /app/node_modules ./node_modules
 COPY --chown=node:node --from=builder /app/package.json ./package.json
-COPY --chown=node:node --from=builder /app/next.config.js ./next.config.js
+COPY --chown=node:node --from=builder /app/next.config.js* ./next.config.js
 COPY --chown=node:node --from=builder /app/public ./public
 COPY --chown=node:node --from=builder /app/.next ./.next
 
 EXPOSE 3000
-CMD ["yarn", "start", "-p", "3000"]
+CMD ["yarn", "start"]
